# satysfi-language-server

./: Cargo.toml  README.md
src/: capabilities.rs  completion.rs  config.rs  definition.rs  diagnostics.rs  documents.rs  hover.rs  language_server.rs  lib.rs  main.rs  parser.rs  util.rs
src/documents/: environments.rs
src/language_server/: capabilities.rs  completion.rs  definition.rs  diagnostics.rs  hover.rs
src/parser/: satysfi.pest  tests.rs
src/resource/: completion_items.toml
