[package]
name = "satysfi-language-server"
version = "0.0.1"
authors = ["monaqa <mogassy@yahoo.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
env_logger = "0.8.3"
itertools = "0.10.0"
log = "0.4.14"
lspower = "1.0.0"
serde = { version = "1.0.124", features = ["derive"] }
simplelog = "0.9.0"
structopt = "0.3.21"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["full"] }
toml = "0.5.8"
# https://github.com/monaqa/satysfi-parser/commit/8b7f37bfd9c0b0f731a021b6e31a943d2a819204
satysfi-parser = { git = "https://github.com/monaqa/satysfi-parser", rev = "8b7f37bfd9c0b0f731a021b6e31a943d2a819204"}
# satysfi-parser = { path = "../satysfi-parser" }
peg = "0.7.0"
